--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,42 +10,52 @@ services:
       - PORT=3002
       - DOCS_URL=http://0.0.0.0
       - DOCS_BASE_URL=/
-    volumes:
-      - ./documentation:/app
-      - /app/node_modules
+    # volumes:
+    #   - ./documentation:/app
+    #   - /app/node_modules
 
-  vckit-api:
-    image: ghcr.io/uncefact/project-vckit:sha-60d583b@sha256:afa777d13512628e4277566a8abf45be43bdd19cdc8cbcc5383ffc00cc0ba912
-    env_file:
-      - local.env
+  mock-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - CONFIG_FILE=./app-config.json
     ports:
-      - 3332:3332
-    depends_on:
-      - db
+      - 3001:80
 
-  db:
-    image: postgres:16-alpine
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=vckit
-    volumes:
-      - vckit-data:/var/lib/postgresql/data
-    restart: always
 
-  storage-service:
-    image: ghcr.io/uncefact/project-identity-resolver:sha-8aed15c@sha256:d768fbb395e39072a4d227ebea651346e5f27a74f0b4938e6676042095599f3b
-    ports:
-      - 3334:3334
-    environment:
-      - API_VERSION=v1
-      - PROTOCOL=http
-      - DOMAIN=localhost
-      - PORT=3334
-      - AVAILABLE_BUCKETS=verifiable-credentials,private-verifiable-credentials,epcis-events
-      - STORAGE_TYPE=local
+  # vckit-api:
+  #   image: ghcr.io/uncefact/project-vckit:sha-60d583b@sha256:afa777d13512628e4277566a8abf45be43bdd19cdc8cbcc5383ffc00cc0ba912
+  #   env_file:
+  #     - local.env
+  #   ports:
+  #     - 3332:3332
+  #   depends_on:
+  #     - db
 
-volumes:
-  vckit-data:
+  # db:
+  #   image: postgres:16-alpine
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - POSTGRES_DB=vckit
+  #   volumes:
+  #     - vckit-data:/var/lib/postgresql/data
+  #   restart: always
+
+  # storage-service:
+  #   image: ghcr.io/uncefact/project-identity-resolver:sha-8aed15c@sha256:d768fbb395e39072a4d227ebea651346e5f27a74f0b4938e6676042095599f3b
+  #   ports:
+  #     - 3334:3334
+  #   environment:
+  #     - API_VERSION=v1
+  #     - PROTOCOL=http
+  #     - DOMAIN=localhost
+  #     - PORT=3334
+  #     - AVAILABLE_BUCKETS=verifiable-credentials,private-verifiable-credentials,epcis-events
+  #     - STORAGE_TYPE=local
+
+# volumes:
+#   vckit-data:
