--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,8 @@ services:
       - 3334:3334
     environment:
       - API_VERSION=v1
-      - PROTOCOL=http
-      - DOMAIN=localhost
+      - PROTOCOL=https
+      - DOMAIN=cherries.datatrust.link
       - PORT=3334
       - AVAILABLE_BUCKETS=verifiable-credentials,private-verifiable-credentials,epcis-events
       - STORAGE_TYPE=local
